@@ -1353,7 +1353,7 @@ class Parser_OldPP
 			# This means that users can paste URLs directly into the text
 			# Funny characters like &ouml; aren't valid in URLs anyway
 			# This was changed in August 2004
-			$s .= $sk->makeExternalLink( $url, $text, false, $linktype, $this->mTitle->getNamespace() ) . $dtrail . $trail;
+			$s .= $sk->makeExternalLink( $url, $text, false, $linktype, $this->getExternalLinkAttribs() ) . $dtrail . $trail;
 
 			# Register link in the output object.
 			# Replace unnecessary URL escape codes with the referenced character
@@ -1364,6 +1364,19 @@ class Parser_OldPP
 
 		wfProfileOut( $fname );
 		return $s;
+	}
+
+	function getExternalLinkAttribs() {
+		$attribs = array();
+		global $wgNoFollowLinks, $wgNoFollowNsExceptions;
+		$ns = $this->mTitle->getNamespace();
+		if( $wgNoFollowLinks && !in_array($ns, $wgNoFollowNsExceptions) ) {
+			$attribs['rel'] = 'nofollow';
+		}
+		if ( $this->mOptions->getExternalLinkTarget() ) {
+			$attribs['target'] = $this->mOptions->getExternalLinkTarget();
+		}
+		return $attribs;
 	}
 
 	/**
@@ -1432,7 +1445,8 @@ class Parser_OldPP
 				$text = $this->maybeMakeExternalImage( $url );
 				if ( $text === false ) {
 					# Not an image, make a link
-					$text = $sk->makeExternalLink( $url, $wgContLang->markNoConversion($url), true, 'free', $this->mTitle->getNamespace() );
+					$text = $sk->makeExternalLink( $url, $wgContLang->markNoConversion($url), true, 'free',
+						$this->getExternalLinkAttribs() );
 					# Register it in the output object...
 					# Replace unnecessary URL escape codes with their equivalent characters
 					$pasteurized = self::replaceUnusualEscapes( $url );
